tests/miniJava/neg/003511_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if extends 0 ) { } else { } } }
